# jira-tui

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.config/: nextest.toml
.github/: copilot-instructions.md  dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml
agent-reviews/: 2026-07-07-github-copilot-cli-claude-opus-4-8.md  2026-07-15-codex-about-navigation.md  README.md
docs/: IMPLEMENTATION.md  INTERACTIONS.md  SPEC.md  WIREFRAMES.md
docs/archive/: IMPLEMENTATION.md  INTERACTIONS.md  SPEC.md  WIREFRAMES.md
docs/archive/design/: README.md  SPEC.md
docs/design/: README.md  SPEC.md  ui-refresh-portrait.html  ui-refresh.html
docs/release/: distribution-strategy.md
scripts/: build-linux-packages.sh  build-release-archive.sh  install.sh  prepare-release-version.sh
src/: cli.rs  editor_launch.rs  keys.rs  lib.rs  main.rs  render.rs  suspend.rs  test_support.rs
src/adf/: compile.rs  markdown.rs  mod.rs
src/app/: assign.rs  async_ops.rs  board.rs  comments.rs  detail.rs  edit.rs  field_mapping.rs  history.rs  links.rs  loader.rs  mod.rs  mouse.rs  onboarding.rs  palette.rs  query.rs  quick_view.rs  search.rs  sort_filter.rs  tests.rs  transitions.rs  tree.rs  view_switch.rs
src/app/async_ops/: events.rs  list_ops.rs  mod.rs  mutation_ops.rs  setup_ops.rs
src/app/tests/: assign.rs  board.rs  board_workflow.rs  comments.rs  detail.rs  edit.rs  field_mapping.rs  history.rs  links.rs  list_and_detail.rs  mod.rs  mouse.rs  onboarding.rs  palette.rs  query.rs  quick_view.rs  search.rs  sort_filter.rs  support.rs  transitions.rs  view_and_setup.rs  view_switch.rs
src/cache/: legacy.rs  mod.rs  queries.rs  schema.rs  tests.rs
src/config/: mod.rs
src/domain/: demo.rs  mod.rs  types.rs
src/git/: mod.rs
src/infra/: mod.rs
src/jira/: config.rs  live.rs  mod.rs
src/jira/live/: comments.rs  detail.rs  fields.rs  mod.rs  mutations.rs  search.rs  support.rs
src/keys/: mod.rs  mouse.rs  welcome.rs
src/mcp/: mod.rs
src/ui/: about.rs  assignee_picker.rs  board.rs  board_columns.rs  detail.rs  detail_columns.rs  editor.rs  field_mapping.rs  footer.rs  header.rs  help.rs  home.rs  home_columns.rs  jax_companion.rs  keymap.rs  list.rs  list_columns.rs  mod.rs  palette.rs  preview.rs  quick_view.rs  quick_view_columns.rs  search.rs  transition_picker.rs  view_picker.rs  welcome.rs
tests/: cli.rs  mcp.rs  render.rs
