[package]
name = "jira-tui"
version = "0.1.0"
edition = "2021"
description = "A developer-first, keyboard-driven Jira terminal UI with a little bit of soul."
license = "MIT"

[features]
default = ["live"]
# `live` pulls in the HTTP stack for talking to real Jira. Disable it
# (`--no-default-features`) for a pure offline / demo build.
live = ["ureq"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
base64 = "0.22"
ureq = { version = "2", features = ["json", "tls"], optional = true }

[profile.release]
opt-level = 2
lto = "thin"
strip = true
