[package]
name = "jira-tui"
version = "0.1.0"
edition = "2021"
description = "A developer-first, keyboard-driven Jira terminal UI with a little bit of soul."
license = "MIT"
authors = ["Scott Morris"]
repository = "https://github.com/smorrisods/jira-tui"
homepage = "https://github.com/smorrisods/jira-tui"
documentation = "https://github.com/smorrisods/jira-tui#readme"
rust-version = "1.87"
build = "build.rs"

[features]
default = ["live"]
# `live` pulls in the HTTP stack for talking to real Jira. Disable it
# (`--no-default-features`) for a pure offline / demo build.
live = ["ureq", "dep:rusqlite"]
# `mcp` adds the `jira-mcp` binary: a Model Context Protocol server that lets
# agents read and write Jira issues. Implies `live` (a Jira MCP server with
# no way to reach Jira isn't useful) and pulls in an async runtime (tokio)
# used only by that binary — the main `jira-tui` TUI stays fully sync.
mcp = ["live", "dep:rmcp", "dep:tokio", "dep:schemars"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json", "tls"], optional = true }
rusqlite = { version = "0.40", features = ["bundled"], optional = true }
rmcp = { version = "2", features = ["server", "transport-io", "schemars"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"], optional = true }
schemars = { version = "1", optional = true }
toml_edit = "0.25.12"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[[bin]]
name = "jira-tui"
path = "src/main.rs"

[[bin]]
name = "jira-mcp"
path = "src/bin/jira_mcp.rs"
required-features = ["mcp"]

[profile.release]
opt-level = 2
lto = "thin"
strip = true

[dev-dependencies]
mockito = "1.7.2"
